@@ -420,7 +420,7 @@ export const characterIds = {
         tags: ["DPS", "Support"]
     },
     3070: {
-        name: "Black Dwarf",
+        name: "Kaalaa Baunaa",
         rarity: 6,
         afflatus: "mineral",
         damageType: "mental",
@@ -498,11 +498,9 @@ export const characterNames = {
 	"Balloon Party": 3024,
 	"Bette": 3045,
 	"Bkornblume": 3020,
-	"Black Dwarf": 3070,
 	"Blonney": 3060,
 	"Bunny Bunny": 3014,
 	"Centurion": 3032,
-	"Jessica": 3056,
 	"Charlie": 3017,
 	"Click": 3049,
 	"Cristallo": 3031,
@@ -517,7 +515,9 @@ export const characterNames = {
 	"Eternity": 3051,
 	"Ezra Theodore": 3074,
 	"Horropedia": 3061,
+    "Jessica": 3056,
 	"John Titor": 3036,
+    "Kaalaa Baunaa": 3070,
 	"Kanjira": 3071,
 	"La Source": 3030,
 	"Leilani": 3035,
