@@ -1,3 +1,7 @@
+2023/01/18
+- Added Kaalaa Baunaa banner
+- Changed Black Dwarf to Kaalaa Baunaa
+
 2023/01/15
 - Fixed beginner and Invitation from the Water
   pulls not showing
